objects/dbu_Search_Results__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Inventory__c</fullName>
        <label>dbu_Inventory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_productName__c</fullName>
        <label>dbu_productName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dbu_search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dbu_searchString</label>
        <referenceTo>dbu_searchString__c</referenceTo>
        <relationshipLabel>dbu_Search_Results</relationshipLabel>
        <relationshipName>dbu_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>dbu_Search_Results</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>dbu_Search_Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu_Search_Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>